# notes-frontend

./: .gitmodules  Makefile  pyproject.toml  readme.md
app/: config.py  main.py
app/elements/: __init__.py
app/elements/side_bar/: __init__.py  item.py  side_bar_view.py
app/event_system/: __init__.py  event_system.py  events.py
app/main_view/: __init__.py  view.py
app/page_wrapper/: __init__.py  page_wrapper.py
app/side_bar/: __init__.py  view.py
app/store/: __init__.py  data_store.py  memory_store.py
