[tool.poetry]
name = "notes-frontend"
version = "0.1.0"
description = ""
authors = ["Mikhail Zotochev <zotochev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.19.0"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
